tests/ui/missing/missing-items/missing-type-parameter.stderr
error[E0412]: cannot find type `ForgotToImport` in this scope
  --> $DIR/missing-type-parameter.rs:3:29
   |
LL | fn do_something() -> Option<ForgotToImport> {
   |                             ^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `T` in this scope
  --> $DIR/missing-type-parameter.rs:8:31
   |
LL | fn do_something_T() -> Option<T> {
   |                               ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | fn do_something_T<T>() -> Option<T> {
   |                  +++

error[E0412]: cannot find type `Type` in this scope
  --> $DIR/missing-type-parameter.rs:13:34
   |
LL | fn do_something_Type() -> Option<Type> {
   |                                  ^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | fn do_something_Type<Type>() -> Option<Type> {
   |                     ++++++

error[E0282]: type annotations needed
  --> $DIR/missing-type-parameter.rs:19:5
   |
LL |     foo();
   |     ^^^ cannot infer type of the type parameter `X` declared on the function `foo`
   |
help: consider specifying the generic argument
   |
LL |     foo::<X>();
   |        +++++

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0282, E0412.
For more information about an error, try `rustc --explain E0282`.
